5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1633_2938.log
== TEST (2019-04-02 18:06:10) 
-- CODE:
from math import*
input("distancia a:")
input("distancia b:")
input("angulo:",)
print(c,2)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(c,2)
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:07:50) 
-- CODE:
from math import*
input("distancia a:")
input("distancia b:")
input("angulo:",)
print(round(4,2))



-- OUTPUT:
angulo:4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:08:14) 
-- CODE:
from math import*
input("distancia a:")
input("distancia b:")
input("angulo:",)
print(round(4,2))



-- EXECUTION TIME:
0.145529
-- TEST CASE 1:
---- input:
8
10
60
---- correct output:
9.17
---- user output:
angulo:4
-- TEST CASE 2:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
angulo:4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:08:31) 
-- CODE:
from math import*
input("distancia a:")
input("distancia b:")
input("angulo:",a e b)
print(round(4,2))



-- ERROR:
File "XXXX", line 4
    input("angulo:",a e b)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:08:37) 
-- CODE:
from math import*
input("distancia a:")
input("distancia b:")
input("angulo:")
print(round(4,2))



-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:09:03) 
-- CODE:
from math import*
input("distancia a:")
input("distancia b:")
input("distancia c:")
input("angulo:")
print(round(4,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:09:32) 
-- CODE:
from math import*
input("distancia a:")
input("distancia b:")
input("distancia c:")
input("angulo:")
print(round(4,2))



-- EXECUTION TIME:
0.190789
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2938/main.py", line 5, in <module>
    input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:20:18) 
-- CODE:
from math import*
input("distancia a:")
input("distancia b:")
input("distancia c:")
input("angulo:")
print(round(c,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:20:19) 
-- CODE:
from math import*
input("distancia a:")
input("distancia b:")
input("distancia c:")
input("angulo:")
print(round(c,2))



-- EXECUTION TIME:
0.15183
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2938/main.py", line 5, in <module>
    input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:20:25) 
-- CODE:
from math import*
input("distancia a:")
input("distancia b:")
input("distancia c:")
input("angulo:")
print(round(x,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:20:26) 
-- CODE:
from math import*
input("distancia a:")
input("distancia b:")
input("distancia c:")
input("angulo:")
print(round(x,2))



-- EXECUTION TIME:
0.210321
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2938/main.py", line 5, in <module>
    input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:25:01) 
-- CODE:
from math import*
input("distancia a")
input("distancia b")
input("distancia c")
input("angulo")
print(round(x,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:25:08) 
-- CODE:
from math import*
input("distancia a")
input("distancia b")
input("distancia c")
input("angulo")
print(round(x,2))



-- EXECUTION TIME:
0.16151
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2938/main.py", line 5, in <module>
    input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:46:58) 
-- CODE:
from math import*
input("distancia a")
input("distancia b")
input("distancia c")
print((radians(round(x,2)))



-- ERROR:
File "XXXX", line 8
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:47:32) 
-- CODE:
from math import*
input("distancia a")
input("distancia b")
input("distancia c")
print(round(x,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(x,2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:48:25) 
-- CODE:
from math import*
input("distancia a")
input("distancia b")
input("distancia c")
print(round("valor de c",2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("valor de c",2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:48:27) 
-- CODE:
from math import*
input("distancia a")
input("distancia b")
input("distancia c")
print(round("valor de c",2))



-- EXECUTION TIME:
0.18348
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2938/main.py", line 5, in <module>
    print(round("valor de c",2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:48:28) 
-- CODE:
from math import*
input("distancia a")
input("distancia b")
input("distancia c")
print(round("valor de c",2))



-- EXECUTION TIME:
0.189649
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2938/main.py", line 5, in <module>
    print(round("valor de c",2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:48:28) 
-- CODE:
from math import*
input("distancia a")
input("distancia b")
input("distancia c")
print(round("valor de c",2))



-- EXECUTION TIME:
0.190751
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2938/main.py", line 5, in <module>
    print(round("valor de c",2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:48:29) 
-- CODE:
from math import*
input("distancia a")
input("distancia b")
input("distancia c")
print(round("valor de c",2))



-- EXECUTION TIME:
0.184446
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2938/main.py", line 5, in <module>
    print(round("valor de c",2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:48:29) 
-- CODE:
from math import*
input("distancia a")
input("distancia b")
input("distancia c")
print(round("valor de c",2))



-- EXECUTION TIME:
0.126452
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2938/main.py", line 5, in <module>
    print(round("valor de c",2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:48:29) 
-- CODE:
from math import*
input("distancia a")
input("distancia b")
input("distancia c")
print(round("valor de c",2))



-- EXECUTION TIME:
0.119478
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2938/main.py", line 5, in <module>
    print(round("valor de c",2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:48:29) 
-- CODE:
from math import*
input("distancia a")
input("distancia b")
input("distancia c")
print(round("valor de c",2))



-- EXECUTION TIME:
0.122009
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2938/main.py", line 5, in <module>
    print(round("valor de c",2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:50:08) 
-- CODE:
from math import*
input("distancia a")
input("distancia b")
input("distancia c")
c=sqrt a**2+b**2-2*a*b*radians(cos.y)
print(round("valor de c",2))



-- ERROR:
File "XXXX", line 5
    c=sqrt a**2+b**2-2*a*b*radians(cos.y)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:50:13) 
-- CODE:
from math import*
input("distancia a")
input("distancia b")
input("distancia c")
c=sqrt a**2+b**2-2*a*b*radians(cos.y)
print(round("valor de c",2))



-- EXECUTION TIME:
0.187798
-- ERROR:
  File "/home/codebench/codes/1633/2938/main.py", line 5
    c=sqrt a**2+b**2-2*a*b*radians(cos.y)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:50:19) 
-- CODE:
from math import*
input("distancia a")
input("distancia b")
input("distancia c")
c=sqrt a**2+b**2-2*a*b*cos.y
print(round("valor de c",2))



-- ERROR:
File "XXXX", line 5
    c=sqrt a**2+b**2-2*a*b*cos.y
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:50:21) 
-- CODE:
from math import*
input("distancia a")
input("distancia b")
input("distancia c")
c=sqrt a**2+b**2-2*a*b*cos.y
print(round("valor de c",2))



-- EXECUTION TIME:
0.168834
-- ERROR:
  File "/home/codebench/codes/1633/2938/main.py", line 5
    c=sqrt a**2+b**2-2*a*b*cos.y
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:50:35) 
-- CODE:
from math import*
input("distancia a")
input("distancia b")
input("distancia c")
print(round("valor de c",2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("valor de c",2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:50:37) 
-- CODE:
from math import*
input("distancia a")
input("distancia b")
input("distancia c")
print(round("valor de c",2))



-- EXECUTION TIME:
0.148977
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2938/main.py", line 5, in <module>
    print(round("valor de c",2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:51:12) 
-- CODE:
cos
radians
sqrt
input("distancia a")
input("distancia b")
input("distancia c")
print(round("valor de c",2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    cos
NameError: name 'cos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:51:13) 
-- CODE:
cos
radians
sqrt
input("distancia a")
input("distancia b")
input("distancia c")
print(round("valor de c",2))



-- EXECUTION TIME:
0.177778
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2938/main.py", line 1, in <module>
    cos
NameError: name 'cos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
